# medical-drugs-billing-system

./: .gitignore  CMakeLists.txt  README.md  Shortcut Keys.txt  hospital_medicines.csv  mainwindow.ui
assets/: resources.qrc
include/: databasemanager.h  helpers.h  logindialog.h  mainwindow.h  models.h  paymentdialog.h
src/: databasemanager.cpp  helpers.cpp  logindialog.cpp  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.ui  mainwindow1.cpp  paymentdialog.cpp  paymentdialog.ui
ui/: mainwindow.css  mainwindow.css.autosave  mainwindow.ui
